# punchy

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.md  README.md  justfile  lib.bevy.d.ts  lib.bevy.types.ts  lib.punchy.d.ts  tsconfig.json
.github/: bors.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-caches.yml  cd.yml  ci.yml  web-demo.yml
assets/: Map.tmx  Tileset.tsx  default.game.yaml  lib.punchy.d.ts
assets/beach/: beach.level.yaml
assets/fighters/bandit/: bandit.fighter.yaml
assets/fighters/big_bass/: big_bass.fighter.yaml
assets/fighters/brute/: brute.fighter.yaml
assets/fighters/dev/: dev.fighter.yaml
assets/fighters/fishy/: fishy.fighter.yaml
assets/fighters/sharky/: sharky.fighter.yaml
assets/fighters/slinger/: slinger.fighter.yaml
assets/items/bomb/: bomb.item.yaml
assets/items/bottle/: bottle.item.yaml
assets/items/box/: box.item.yaml
assets/items/box/alternateHealth/pellets/: pellets.item.yaml
assets/items/fishfood/: 50percent.ts  fishfood.item.yaml
assets/items/health/: health.item.yaml  health.ts
assets/items/melee_weapon/: melee_weapon.item.yaml
assets/items/musket/: musket.item.yaml
assets/items/poison/: poison.ts
assets/items/rock/: rock.item.yaml
assets/items/sword/: sword.item.yaml
assets/levels/1_beach/: beach.level.yaml
assets/locales/en-US/: main.ftl
assets/scripts/: demo_script.ts  log_test.ts  test1.ts
demo/: index.html  littlefighter2.js
demo/assets/fighters/fishy/: fishy.fighter.yaml
demo/assets/fighters/sharky/: sharky.fighter.yaml
demo/assets/fighters/slinger/: slinger.fighter.yaml
history/: history.db
macros/: Cargo.toml
macros/src/: lib.rs
player/: latest
player/v0.0.2/: index.html
player/v0.0.2/assets/: default.game.yaml
player/v0.0.2/assets/beach/: beach.level.yaml
player/v0.0.2/assets/fighters/fishy/: fishy.fighter.yaml
player/v0.0.2/assets/fighters/slinger/: slinger.fighter.yaml
player/v0.0.3/: punchy.js
player/v0.0.3/assets/fighters/bandit/: bandit.fighter.yaml
player/v0.0.3/assets/fighters/brute/: brute.fighter.yaml
player/v0.0.3/assets/fighters/slinger/: slinger.fighter.yaml
player/v0.0.4/: index.html  punchy.js
player/v0.0.4/assets/fighters/slinger/: slinger.fighter.yaml
player/v0.0.4/assets/items/health/: health.item.yaml
player/v0.0.4/assets/locales/en-US/: main.ftl
player/v0.1.0/: punchy.js
player/v0.1.0/assets/fighters/sharky/: sharky.fighter.yaml
player/v0.1.0/assets/levels/1_beach/: beach.level.yaml
player/v0.2.0/: punchy.js
player/v0.2.0/assets/: default.game.yaml
player/v0.2.0/assets/fighters/slinger/: slinger.fighter.yaml
player/v0.2.0/assets/items/bomb/: bomb.item.yaml
player/v0.2.0/assets/items/box/: box.item.yaml
player/v0.2.0/snippets/bevy_mod_js_scripting-275874556f9101d1/src/runtime/js/: wasm_setup.js
player/v0.2.1/assets/items/musket/: musket.item.yaml
player/v0.3.0/: punchy.js
player/v0.3.0/assets/items/bomb/: bomb.item.yaml
player/v0.3.0/assets/items/pellets/: 25percent.ts
player/v0.3.0/assets/items/poison/: poison.item.yaml
player/v0.3.0/assets/items/sword/: sword.item.yaml
player/v0.3.0/assets/levels/1_beach/: beach.level.yaml
player/v0.3.0/snippets/bevy_mod_js_scripting-275874556f9101d1/src/runtime/js/: wasm_setup.js
scripts/: build-web.sh
src/: animation.rs  assets.rs  attack.rs  audio.rs  camera.rs  collision.rs  collisions.rs  commands.rs  config.rs  consts.rs  controller.rs  damage.rs  enemy.rs  enemy_ai.rs  fighter.rs  fighter_state.rs  game_init.rs  input.rs  item.rs  lifetime.rs  loading.rs  localization.rs  main.rs  metadata.rs  movement.rs  orphans.rs  platform.rs  player.rs  scripting.rs  state.rs  ui.rs  y_sort.rs
src/loading/: progress.rs
src/metadata/: localization.rs  settings.rs  ui.rs
src/scripting/: engine.rs  engines.rs  ops.rs  punchy.js
src/scripting/engines/: javascript.rs  native_javascript.rs  wasm_javascript.rs
src/scripting/engines/javascript/: native.rs
src/scripting/engines/native_javascript/: punchy.js
src/scripting/engines/wasm_javascript/: punchy.js
src/ui/: debug_tools.rs  extensions.rs  hud.rs  main_menu.rs  pause_menu.rs  widgets.rs
src/ui/widgets/: bordered_button.rs  bordered_frame.rs  progress_bar.rs
wasm_resources/: index.html
