[package]
name = "punchy"
version = "0.1.0"
description = "A 2.5D side-scroller beatemup"
authors = ["The Fish Fight Game & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = [
    ".",
    "macros"
]

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = [
    "x11",
    "png",
    "filesystem_watcher"
]

[dependencies]
punchy_macros = { path = "./macros" }

anyhow = "1.0.58"
bevy-parallax = { git = "https://github.com/zicklag/bevy-parallax", branch = "bevy-0.8"}
bevy_egui = "0.15.0"
egui_extras = "0.18.0"
bevy_kira_audio = { version = "0.11.0", features = ["mp3"] }
bevy_rapier2d = { version = "0.16.0", features = ["debug-render"] }
iyes_loopless = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9.2"
thiserror = "1.0.31"
structopt = "0.3.26"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", default-features = false, branch = "dev" }
unic-langid = "0.9.0"
bevy_fluent = { git = "https://github.com/kgv/bevy_fluent.git" }
sys-locale = "0.2.1"
fluent = "0.16.0"
directories = "4.0.1"
async-channel = "1.6.1"
once_cell = "1.13.0"
deno_core = "0.144.0"
deno_ast = { version = "0.17.0", features = ["transpiling"] }
async-lock = "2.5.0"
dashmap = "5.3.4"
cismute = "0.1.2"

# Waiting for updates to Bevy 0.8
# bevy_mod_debugdump = { version = "0.4", optional = true }
# bevy-inspector-egui = { version = "0.11", optional = true }
# bevy-inspector-egui-rapier = { version = "0.4", optional = true, features = ["rapier2d"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window","Location","Storage"] }

[features]
default = []
# Waiting for update to Bevy 0.8
# schedule_graph = ["bevy_mod_debugdump"]

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3
debug = false
# As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
# profiling a (incremental) build showed that the large part of the time is spent in optimization
# passes.
# Since it's not clear why this happens and how to mitigate it, optimizations are entirely
# disabled.
# It's possible to specify opt-level=1 with lto=false, which is faster, but it's still considerably
# slower than opt-level=0.

[profile.release]
lto = true
codegen-units = 1 # Improves physics performance for release builds
