[package]
name = "punchy"
version = "0.1.0"
description = "A 2.5D side-scroller beatemup"
authors = ["The Fish Folk Game & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = [
    ".",
    "macros"
]

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "x11",
    "png",
    "filesystem_watcher",
    "bevy_gilrs"
]

[dependencies]
punchy_macros = { path = "./macros" }

anyhow = "1.0.58"
bevy-parallax = "0.3.0"
bevy_egui = "0.18.0"
egui_extras = "0.20.0"
bevy_kira_audio = { version = "0.13.0", features = ["mp3"] }
bevy_rapier2d = { version = "0.19.0", features = ["debug-render"] }
iyes_loopless = { version = "0.9.0", features = ["states"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9.2"
thiserror = "1.0.31"
structopt = "0.3.26"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

leafwing-input-manager = { version = "0.7", default-features = false }
unic-langid = "0.9.0"
bevy_fluent = "0.5.0"
fluent_content="0.0.3"
sys-locale = "0.2.1"
fluent = "0.16.0"
directories = "4.0.1"
async-channel = "1.6.1"
once_cell = "1.13.0"
bevy_mod_js_scripting = { git = "https://github.com/jakobhellermann/bevy_mod_js_scripting.git" }

# Debug tools
bevy-inspector-egui = { version = "0.15.0" }
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_mod_debugdump = { version = "0.6.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window","Location","Storage"] }

[features]
default = []
schedule_graph = ["bevy_mod_debugdump"]

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev]
# As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
# profiling a (incremental) build showed that the large part of the time is spent in optimization
# passes.
# Since it's not clear why this happens and how to mitigate it, optimizations are entirely
# disabled.
# It's possible to specify opt-level=1 with lto=false, which is faster, but it's still considerably
# slower than opt-level=0.

[profile.release]
lto = true
codegen-units = 1 # Improves physics performance for release builds
